--- a/app/src/main/res/menu/navbar_menu.xml
+++ b/app/src/main/res/menu/navbar_menu.xml
@@ -33,8 +33,16 @@
         android:icon="@drawable/ic_grain_black"/>
 
     <item
+        android:id="@+id/menu_item_expense"
+        android:checkable="true"
+        android:title="Expense"
+        android:icon="@drawable/ic_arrow_back_white"/>
+
+    <item
         android:id="@+id/menu_item_fin_rep"
         android:checkable="true"
         android:title="@string/menu_fin_rep"
         android:icon="@drawable/ic_money"/>
+
+
 </menu>
