--- a/app/src/main/res/layout/customer_adapter.xml
+++ b/app/src/main/res/layout/customer_adapter.xml
@@ -11,8 +11,10 @@
         android:layout_width="0dp"
         android:layout_height="32dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/default_string"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000"
