--- a/app/src/main/res/layout/appointment_adapter.xml
+++ b/app/src/main/res/layout/appointment_adapter.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/array_adapter_title"
+        android:id="@+id/appointment_adapter_title"
         android:layout_width="fill_parent"
         android:layout_height="32dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/array_adapter_service"
+        android:id="@+id/appointment_adapter_service"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -32,10 +32,10 @@
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/array_adapter_title" />
+        app:layout_constraintTop_toBottomOf="@id/appointment_adapter_title" />
 
     <TextView
-        android:id="@+id/array_adapter_date_time"
+        android:id="@+id/appointment_adapter_date_time"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_gravity="center"
@@ -45,5 +45,5 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/array_adapter_title" />
+        app:layout_constraintTop_toBottomOf="@id/appointment_adapter_title" />
 </android.support.constraint.ConstraintLayout>
