--- a/app/src/main/res/layout/expense_adapter.xml
+++ b/app/src/main/res/layout/expense_adapter.xml
@@ -37,7 +37,7 @@
             android:id="@+id/expense_adapter_date"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
-            android:layout_gravity="center"
+            android:layout_gravity="right"
             android:gravity="right"
             android:layout_marginEnd="16dp"
             android:text="@string/default_string"
