--- a/app/src/main/res/menu/edit_menu.xml
+++ b/app/src/main/res/menu/edit_menu.xml
@@ -5,11 +5,12 @@
     <item
         android:id="@+id/edit_bar_cancel"
         android:icon="@drawable/ic_close_white_24dp"
-        android:title="Item"
+        android:title="@string/button_cancel"
         app:showAsAction="always"
         />
     <item
+        android:id="@+id/edit_bar_done"
         android:icon="@drawable/ic_done_white"
-        android:title="Item"
+        android:title="@string/button_save"
         app:showAsAction="always" />
 </menu>
