--- a/app/src/main/res/layout/fragment_customer_view.xml
+++ b/app/src/main/res/layout/fragment_customer_view.xml
@@ -59,6 +59,9 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="24dp"
             android:text="@string/set_appt"
+            android:background="@color/colorAccent"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_view_email" />
 
@@ -69,6 +72,9 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="24dp"
             android:text="@string/button_edit"
+            android:background="@color/colorAccent"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_view_email" />
     </android.support.constraint.ConstraintLayout>
