--- a/app/src/main/res/layout/fragment_customer_view.xml
+++ b/app/src/main/res/layout/fragment_customer_view.xml
@@ -66,13 +66,13 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_view_email" />
 
         <Button
-            android:id="@+id/btn_save_edit"
+            android:id="@+id/btn_edit_customer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="24dp"
-            android:text="@string/button_edit"
             android:background="@color/colorAccent"
+            android:text="@string/button_edit"
             android:textColor="#ffffff"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
