--- a/app/src/main/res/layout/goal_adapter.xml
+++ b/app/src/main/res/layout/goal_adapter.xml
@@ -13,6 +13,8 @@
         android:layout_gravity="center"
         android:layout_marginStart="16dp"
         android:text="@string/goal_title"
+        android:clickable="false"
+        android:focusable="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000"
         app:layout_constraintEnd_toStartOf="@+id/goal_adapter_complete"
@@ -26,6 +28,8 @@
         android:layout_gravity="center"
         android:layout_marginLeft="16dp"
         android:text="@string/goal_end_date"
+        android:clickable="false"
+        android:focusable="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
